--- a/6.3.0.ImpresionPieza.md
+++ b/6.3.0.ImpresionPieza.md
@@ -33,4 +33,27 @@ Terminada la primera capa superior
 
 Segunda capa superior, muy lisita. En este caso habíamos configurado sólo 2 capas superiores
 
+## Conceptos
+
+Retracción
+Soporte
+adherenica:
+* Borde
+* Falda
+* Brim
+
+Perímetros
+
+capa superior
+capa inferior
+
+
+puentes, arcos, agujeros, voladizos,
+
+## Capas superiores e inferiores
+
+[![Vídeo: Calidad de las capas superiores](https://img.youtube.com/vi/kb7x8JF50N0/0.jpg)](https://drive.google.com/file/d/162UCOAhJpprlGXIQ7bDplaLy4nFF1YWB/view?usp=sharing)
+
+[Vídeo: Calidad de las capas superiores](https://drive.google.com/file/d/162UCOAhJpprlGXIQ7bDplaLy4nFF1YWB/view?usp=sharing)
+
 
