--- a/6.3.1.Modificadores.md
+++ b/6.3.1.Modificadores.md
@@ -1,3 +1,5 @@
+## Modificadores
+
 En prusaSlicer o en Cura se pueden añadir modificadores tanto para reforzar el soporte como para quitarlo.
 
 
@@ -14,9 +16,3 @@ En prusaSlicer o en Cura se pueden añadir modificadores tanto para reforzar el 
 [Vídeo: 6.3.1 Modificadores de soporte en PrusaSlicer: Refuerzo y Bloque de soporte](https://drive.google.com/file/d/1brWtcqTIYJljr6qRWkTdPFtN0gPSAiib/view?usp=sharing)
 
 
-Ejemplo
-
-https://youtu.be/XeVzP7Q4oIE
-
-
-Texturas en PrusaSlicer
