--- a/6.3.3.Multicolor.md
+++ b/6.3.3.Multicolor.md
@@ -1,4 +1,5 @@
-Ejemplo de marvel
+## Multicolor
+
 
 Change filament
 
@@ -33,4 +34,17 @@ En PrusaSlicer...
 [![Vídeo: 6.3.3 Laminando piezas con cambios de filamento para impresiones multicolor](https://img.youtube.com/vi/hpHaA-ts89w/0.jpg)](https://drive.google.com/file/d/1-aN93x5C3Frgwkc-X4B1nJvS4mTC_YK0/view?usp=sharing)
 
 [Vídeo: 6.3.3 Laminando piezas con cambios de filamento para impresiones multicolor](https://drive.google.com/file/d/1-aN93x5C3Frgwkc-X4B1nJvS4mTC_YK0/view?usp=sharing)
+
+En el siguiente vídeo vamos a ver el resultado en una impresora Prusa i3
+
+[![Vídeo: 6.3.3 Impresion Bicolor usando una impresora Prus i3](https://img.youtube.com/vi/GMtm66EDobs/0.jpg)](https://drive.google.com/file/d/1V0dzk11nCsnFNNcTsqKjmfbra4ERZgcV/view?usp=sharing)
+
+[Vídeo: 6.3.3 Impresion Bicolor usando una impresora Prus i3](https://drive.google.com/file/d/1V0dzk11nCsnFNNcTsqKjmfbra4ERZgcV/view?usp=sharing)
+
+Ahora vamos a hacerlo en una impresora KingRoon KP3s
+
+
+[![Vídeo: 6.3.3 Impresión Bicolor en una impresora KingRoon KP3s](https://img.youtube.com/vi/GqjyWON5qSM/0.jpg)](https://drive.google.com/file/d/1hy--Nog416CY-J9A9p0LUG5Kx6jSNwP6/view?usp=sharing)
+
+[Vídeo: 6.3.3 Impresión Bicolor en una impresora KingRoon KP3s](https://drive.google.com/file/d/1hy--Nog416CY-J9A9p0LUG5Kx6jSNwP6/view?usp=sharing)
 
