--- a/6.0.0.Mejoras.md
+++ b/6.0.0.Mejoras.md
@@ -1,11 +1,17 @@
 # Mejoras de calidad
 
+Ya que estamos imprimiendo algunos modelos, en este tema vamos a ver cómo podemos mejorar la calidad de impresión. Vamos a centrarnos en mejorar, en ver los detalles que influyen en la calidad. En un tema posterior veremos qué hacer cuando tenemos errores de impresión.
+
+Entendemos como un error de impresión aquella pieza que no cumple mínimamente con lo que esperamos.
+
+También vamos a precisar algunos conceptos para teniéndolos claros poder definir mejor el resultado que esperamos tener.
+
+Al final del módulo veremos también como mejorar nuestras impresoras añadiendo piezas o modificiaciones sencillas para conseguir mejores impresiones.
+
 [![Vídeo: 6.0 Mejorando la calidad de la Impresión](https://img.youtube.com/vi/WcuUEhJ70s8/0.jpg)](https://drive.google.com/file/d/1bNHQl_onX3AR1GUcQDhKFTnSZcQSjuzU/view?usp=sharing)
 
 
 [Vídeo: 6.0 Mejorando la calidad de la Impresión](https://drive.google.com/file/d/1bNHQl_onX3AR1GUcQDhKFTnSZcQSjuzU/view?usp=sharing)
-
-
 
 
 
