--- a/0.3.Tecnologias3D.md
+++ b/0.3.Tecnologias3D.md
@@ -67,5 +67,7 @@ FDM 0.2mm vs DLP 0.02mm
 
 ![Diferencia de resolución y calidad entre tecnología FDM vs DLP](./images/FDMvsDLP2.png)
 
+Otro efecto a tener en cuenta es que en una impresora FDM la resolución en los ejes X e Y es el tamaño del agujero de la boquilla, unos 0.4mm bastante más baja que en el eje Z, donde podemos llegar a 0.05mm. En las impresoras DLP la resolución es muy similiar en lo 3 ejes y del orden de los 0.01mm en las 3 direcciones. Así los detalles serán mejores  en todas las direcciones.
+
 Viendo este resultado nos preguntamos ¿por qué no utilizamos impresoras de tecnología DLP?  aquí hace hoy la principal diferencia el coste del material el filamento nos cuesta aproximadamente unos 20 € por kilo mientras que la resina puede llegar a costarnos más de 100€.  En aquellos mercados en los que se puede vender objetos impresos a un alto precio cada vez se utiliza más obviamente la tecnología DLP.
 
