--- a/6.0.1.TestCalidad.md
+++ b/6.0.1.TestCalidad.md
@@ -57,12 +57,12 @@ Algunos materiales plásticos tienen la tendencia a expandirse al enfriarse con 
 
 Imprimiendo estas piezas para un material y temperatura concreta podemos ajustar un parámetro llamado **Expansión horizontal** para compesar esta expansión. Más adelante veremos cómo ajustar esta parámetro.
 
-![](./images/Test_expansion_horizontal.jpg)
+![Pieza para ajustar la expansión horizontal](./images/Test_expansion_horizontal.jpg)
 
 
 ### Test completos
 
-Se suelen llamar a estos modelos "Tests de tortura" porque intentan llevar hasta el extremo a las impresoras. Tienen un poco de todo:
+Se suelen llamar a estos modelos "Tests de tortura" porque intentan llevar hasta el límite a las impresoras. Tienen un poco de todo:
 
 * Voladizos
 * Puentes
