--- a/6.0.3.PosicionMpresion.md
+++ b/6.0.3.PosicionMpresion.md
@@ -1,19 +1,28 @@
 # Posición de impresión
 
-En muchas ocasiones resulta crítica la posición en la que debemos poner nuestro diseño para que se imprima
+Es algo evidente que el resultado de la impresión depende mucho de la orientación en la que coloquemos el modelo al laminar. 
 
-Ejemplo: El [superconocido cráneo de T-rex](https://www.thingiverse.com/thing:308335)
+Ya vimos que en nuestras impresoras la resolución en los ejes X e Y viene dada por el tamaño del agujero de la boquilla, unos 0.4mm. Como vemos es bastante más baja que la que podemos alcanzar en el eje Z, donde podemos llegar a 0.05mm. Así los detalles serán mejores en altura que en las otras direcciones.
+
+Es por tanto que en muchas ocasiones la posición resulta crítica para conseguir la calidad que esperamos.
+
+En otras ocasiones podemos reducir bastante la cantidad de material de soporte necesario dependiendo de la orientación, bien por la estructura de la pieza o porque el diseñador lo pensó así.
+
+Esto ocurre en el [superconocido cráneo de T-rex](https://www.thingiverse.com/thing:308335) donde se puede imprimir sin soporte usando esta orientación, en contra de lo que nos dice nuestra intuición:
 
 ![Mejor posición para imprimir T-Rex](./images/T-RexSkull_Skull_preview_featured.jpg)
 
+Veamos algunos ejemplos en los que la calidad mejora al imprimir las piezas en vertical: 
 
-[Modelo Fillenium Malcon](https://www.thingiverse.com/thing:919475)
+Por ejemplo en este modelo muy conocido [Fillenium Malcon](https://www.thingiverse.com/thing:919475) (nótese el nombre aparentemente disléxico para evitar reclamaciones).
 
 ![Fillenium Malcon impreso en vertical](./images/FilleniumMalconIMG_1098_preview_featured.jpeg)
 
-[Modelo bitcoin](https://www.myminifactory.com/es/object/3d-print-bitcoin-49537)
+O este modelo de moneda [bitcoin](https://www.myminifactory.com/es/object/3d-print-bitcoin-49537), que también da mejor resultado al imprimirlo en vertical
 
 ![Modelo impreso de bitcoin](./images/720X720-img-3185.jpeg)
+
+En el caso de que vayamos a imprimir una pieza alta en posición vertical, es mejor asegurarnos de tener una buena adherencia añadiendo un elemento como falda o brim para garantizar una mayor superficie de agarre con la base.
 
 [![Vídeo: Eligiendo la mejor posición para imprimir un modelo](https://img.youtube.com/vi/uy2WM_DV2es/0.jpg)](https://drive.google.com/file/d/1uLW3H38QPAgmt0qR4t5A_r703Tpa82o0/view?usp=sharing)
 
