--- a/6.0.2.Adherencia.md
+++ b/6.0.2.Adherencia.md
@@ -1,16 +1,17 @@
-
 ## Problemas con la adherencia
 
-Vamos a ver varios ejemplos de piezas impresas en las que ha fallado la adherencia
+Vamos a ver varios ejemplos de piezas impresas en las que ha fallado la adherencia y sus consecuencias:
 
-Ejemplo de las aletas del cohete
+Vamos a ver un primer ejemplo donde una de las aletas del cohete de Tintin, se ha despegado de la base (por falta de calibración) curvándose bastante. 
 
-
-
-![](./images/PiezaMalaAdherencia.jpg)
+![Comparación entre la pieza plana y la curvada](./images/PiezaMalaAdherencia.jpg)
 
 
-![](./images/PiezaMalaAdherencia2.jpg)
+Un caso similar en el que debido a la falta de calibración en una de las esquinas hace que una parte de la pieza se depegue.
+
+![Pieza con una parte despegada](./images/PiezaMalaAdherencia2.jpg)
+
+También se puede producir problemas de adherencia si la temperatura de la base es baja.
 
 
 [![Vídeo: 6.0.2 Problemas con la adherencia](https://img.youtube.com/vi/74fjSUyOIUo/0.jpg)](https://drive.google.com/file/d/1D-ABtxHB_TlwLHV1EYeOe8yCa016kU8K/view?usp=sharing)
@@ -19,16 +20,22 @@ Ejemplo de las aletas del cohete
 
 ## Mejora de la adherencia
 
-1. Recalibra la base
-1. Subir temperatura de la base
-1. Añadir laca
-1. Añadir brim/falda/...
+¿Qué podemos hacer para mejorar la adherencia?
+
+1. Recalibra la base con frecuencia: una vez estamos acostumbrados a hacerlo no tardamos nada, incluso si es leve podemos hacerlo mientras imprimimos viendo la forma en la que se imprime la primera capa.
+1. Subir temperatura de la base: al subirla conseguiremos una mejor adherencia, pero no sirve de nada si nuestra pieza ya ha comenzado a despegarse
+1. Añadir laca: si imprimimos sobre cristal o una superficie muy lisa podemos mejorar la adherencia usando laca. Sirve casi cualquier laca, pero siempre he obtenidos muy buenos resultados con la de la marca Nelly. Si añadimos mucha laca la pieza puede quedarse con parte de ella adherida, y salvo que el filamento sea blanco, se notarán los restos.
+1. También se pueden usar otros materiales para mejorar la adherencia, como la cinta de carrocero o el pegamento en barra.
+1. Añadir elementos de mejora de la adherencia como brim/falda/... en el laminado: estos elementos van a mejorar el agarre de la pieza. A veces pueden ser útiles si se añaden a las esquinas de nuestro modelo si este es bastante ancho.
+
 
 ## Tipos de base y su resultado
 
-1. Cristal/espejo
-1. Cristal con textura
-1. Base magnética
+Dependiendo del tipo de superficie de la base de impresión obtendremos unos resultados u otros, con mejor o peor agarre y con un acabado más o menos liso:
+
+1. Cristal/espejo: nos va a permitir obtener un acabado muy liso y brillante, pero habrá que mejorar la adherencia subiendo la temperatura o añadiendo laca.
+1. Cristal con textura: permite acabados bastante lisos pero la textura o una serigrafía mejoran el agarre.
+1. Base magnética: suelen ser rugosas para conseguir mejorar adherencia, lo que nos produce un acaba también rugoso.
 
 [![Vídeo: 6.0.2. Resultados con diferentes bases](https://img.youtube.com/vi/yjec1sNM3X8/0.jpg)](https://drive.google.com/file/d/1BeZfm1jhCl5VGWXW434EYVqhP4YP2B7J/view?usp=sharing)
 
@@ -37,11 +44,9 @@ Ejemplo de las aletas del cohete
 
 ## Exceso de adherencia
 
-No vamos a poder separar el soporte
+A veces el problema es que tenemos demasiada adherencia y cuesta demasiado separar la pieza de la base (esto no ocurre en las bases flexibles magnéticas) o no vamos a poder separar la pieza del soporte, por que se han fundido entre sí.
 
-El soporte y la pieza quedan fundidos
-
-Se queda tan pegado el filamento que luego puede pegarse a otras impresiones
+Otro problema es que el filamente se quede tan pegado a la base que puede pegarse a otras impresiones si no limpiamos bien la base.
 
 [![Vídeo: 6.0.2 Problemas por exceso de adherencia](https://img.youtube.com/vi/Y8QM9BOsTZc/0.jpg)](https://drive.google.com/file/d/1rYBQjDKGCGZZeqEXdMptzcw4_8lSE0TQ/view?usp=sharing)
 
