--- a/4.0.1.ComponentesImpresora3D.md
+++ b/4.0.1.ComponentesImpresora3D.md
@@ -70,6 +70,38 @@ También suelen incluir un potenciómetro para ajustar la cantidad de potencia q
 
 Existen diferentes marcas y versiones, unos consiguen un movimiento de los motores más silencioso que otros. De la calidad de los driver depende que el movimiento de nuestra impresora sea más suave o que haga más o menos ruido.
 
+
+Casi todos tienen
+
+**Pololu A4988** 16 micropasos 
+
+![Pololu A4988](./images/Pololu-A4988-300x245.jpg)
+
+**Pololu DRV8825** 
+
+* 32 micropasos
+* Hasta 45v y 2.2A
+* 3.3 y 5 V
+
+
+![Pololu DRV8825](./images/Pololu-DRV8825-300x294.jpg)
+
+**TMC2225**
+
+
+**Trinamic 2100**
+
+* 256 micropasos
+* 46V y 2.5A
+
+![TMC 2100](./images/TMC2100.jpg)
+
+**Trinamic 2208**
+
+* 36V y 1.4A
+
+![Trinamic 2208](./images/Trinamic-2208.jpg)
+
 A esta placa también se conectan los diferentes sensores que miden la temperatura en la base y en el fusor y los finales de carrera para posicionar con precisión el extrusor.
 
 Un esquema típico de conexión de una placa Ramps sería el siguiente:
