--- a/6.9.0.MejorasHardware.md
+++ b/6.9.0.MejorasHardware.md
@@ -1,6 +1,26 @@
-capucha de silicona para el bloque calefactor
+## Mejoras en el hardware
+
+### Mejorando el aislamiento térmico
+
+Una capucha de silicona mejora el aislamiento del bloque calefactor, haciéndolo más eficiente al evitar fugas de calor
+
+![Capucha de siliciona](./images/silicon_hotend_.jpg)
+
+
+Acoples de silicona para la base caliente
+
+![](./images/s-l300.jpg)
+
+![](./images/cork_hotbed.jpg)
+
+![](./images/silicon_hotbed.png)
 
 acoples de motores con muelles para reducción del ruido
 
+### Reduciendo el ruido
+
 ventiladores más silenciosos
+
+driver más silenciosos y eficientes
+
 
