--- a/4.0.1.ComponentesImpresora3D.md
+++ b/4.0.1.ComponentesImpresora3D.md
@@ -88,11 +88,16 @@ Casi todos tienen
 
 **TMC2225**
 
+* 256 micropasos
+* 36V y 2A
+
+![TMC 2225](./images/tmc2225.jpg)
 
 **Trinamic 2100**
 
 * 256 micropasos
 * 46V y 2.5A
+* Modo de bajo consumo cuando el motor está parado
 
 ![TMC 2100](./images/TMC2100.jpg)
 
@@ -144,6 +149,10 @@ La mayoría de las impresoras actuales incluyen una fuente estándar, como la de
 En el 99.99 % de las impresoras se utilizan motores paso a paso para conseguir la precisión necesaria y casi siempre del formato Nema 17:
 
 ![Motor paso a paso Nema17](./images/nema17.jpg)
+
+Internamente un motor paso a paso tienen varias bobinas que nos permiten hacer los movimientos con precisión:
+
+![Interior de un motor paso a paso](./images/stepper-motor-open-2.jpg)
 
 De la calidad de los motores va a depender la velocidad y la precisión que consigamos en nuestra impresiones.
 
