--- a/6.0.0.Mejoras.md
+++ b/6.0.0.Mejoras.md
@@ -4,9 +4,9 @@ Ya que estamos imprimiendo algunos modelos, en este tema vamos a ver cómo podem
 
 Entendemos como un error de impresión aquella pieza que no cumple mínimamente con lo que esperamos.
 
-También vamos a precisar algunos conceptos para teniéndolos claros poder definir mejor el resultado que esperamos tener.
+También vamos a precisar algunos conceptos para, teniéndolos claros, poder definir mejor el resultado que esperamos tener.
 
-Al final del módulo veremos también como mejorar nuestras impresoras añadiendo piezas o modificiaciones sencillas para conseguir mejores impresiones.
+Al final del módulo veremos también como mejorar nuestras impresoras añadiendo piezas o modificaciones sencillas para conseguir mejores impresiones.
 
 [![Vídeo: 6.0 Mejorando la calidad de la Impresión](https://img.youtube.com/vi/WcuUEhJ70s8/0.jpg)](https://drive.google.com/file/d/1bNHQl_onX3AR1GUcQDhKFTnSZcQSjuzU/view?usp=sharing)
 
