--- a/6.0.1.TestCalidad.md
+++ b/6.0.1.TestCalidad.md
@@ -25,7 +25,7 @@ Yo lo utilizo cuando quiero afinar la calidad de la impresión también como pru
 
 Una vez tenemos bastante fina nuestra impresora, podemos empezar a imprimir piezas articuladas. Estas piezas necesitan  una muy buena calibración en la temperatura y características del filamento, puesto que internamente las piezas tienen una estructura interior bastante compleja, con partes separadas pero muy cercanas que requieren una tolerancia muy ajustada.
 
-Un modelo articulado adecuado a empezar (necesita de un menor nivel de ajuste) es el conocido pulpo [Octopus](https://www.thingiverse.com/thing:3495390) con sus 8 tentáculos articulados. Tras imprimirlo y despegarlo de la base tenemos que retirar la primera capa que actúa como "pegamento" entre las partes de los tentáculos. 
+Un modelo articulado adecuado para empezar (necesita de un menor nivel de ajuste) es el conocido pulpo [Octopus](https://www.thingiverse.com/thing:3495390) con sus 8 tentáculos articulados. Tras imprimirlo y despegarlo de la base tenemos que retirar la primera capa que actúa como "pegamento" entre las partes de los tentáculos. 
 
 Una vez desbloqueados los iremos moviendo para limar y retirar las pequeñas imperfecciones
 
@@ -41,7 +41,7 @@ En la siguiente imagen vemos que la estructura interior de los modelos articulad
 
 Si al imprimirlo vemos que las articulaciones no se mueven, podemos ir aplicando poco a poco más fuerza, hasta conseguir separar las piezas. 
 
-Si la configuración no es adecuada, por ejemplo una temperatura excesiva, las piezas internas estarán conectadas y se fundirán, impidiendo una buena articulación.
+Si la configuración no es adecuada, por ejemplo una temperatura excesiva, las piezas internas pueden quedar soldadas, impidiendo una buena articulación.
 
 ### Modelos para ajustar la calidad
 
@@ -55,7 +55,7 @@ El [Test de expansión horizontal](https://www.thingiverse.com/thing:1662342) no
 
 Algunos materiales plásticos tienen la tendencia a expandirse al enfriarse con lo que el tamaño de la pieza impresa es levemente superior al que ha calculado el software laminar. 
 
-Imprimiendo estas piezas para un material y temperatura concreta podemos ajustar un parámetro llamado **Expansión horizontal** para compesar esta expansión. Más adelante veremos cómo ajustar esta parámetro.
+Imprimiendo estas piezas para un material y temperatura concreta podemos ajustar un parámetro llamado **Expansión horizontal** para compensar esta expansión. Más adelante veremos cómo ajustar este parámetro.
 
 ![Pieza para ajustar la expansión horizontal](./images/Test_expansion_horizontal.jpg)
 
