--- a/6.6.Proyectos3D.md
+++ b/6.6.Proyectos3D.md
@@ -36,3 +36,14 @@ repeticiones de impresiones
 
 
 ## Cohete de Tintin
+
+[Modelo](https://cults3d.com/fr/mod%C3%A8le-3d/jeu/fusee-tintin-tinin-rocket)
+
+/home/javacasm/modelos3D/tiih/fusee-tintin-tinin-rocket
+
+guardar enlace y recomendaciones 
+mirar comentarios
+
+## Rover marciano
+
+
