--- a/6.0.4.Relleno.md
+++ b/6.0.4.Relleno.md
@@ -1,5 +1,11 @@
 ## Elección del tipo de relleno a elegir
 
+Es muy importante que elijamos adecuadamente el tipo de relleno que vamos a utilizar para nuestra pieza.  Por ejemplo si nuestra pieza necesita tener una gran dureza además de usar un porcentaje adecuado de relleno será conveniente que utilicemos un relleno pensado para soportar esfuerzos como puede ser el rectilíneo o el cúbico si las fuerzas se producen por igual en todas las direcciones.
+
+En cambio si estamos haciendo una pieza con un fin principalmente estético es fundamental que veamos  si el relleno interno afecta al resultado externo de la pieza.
+
+En el siguiente vídeo vamos a ver como una mala elección del tipo de relleno da lugar a un acabado de menor calidad de la que podríamos haber obtenido.
+
 
 [![Vídeo: 6.0.4 Selección del tipo de relleno adecuado](https://img.youtube.com/vi/6KZqx4rLM7I/0.jpg)](https://drive.google.com/file/d/18voj0Rm0_JCcV_rIHBCkr88Q5oCmCNRT/view?usp=sharing)
 
