--- a/6.0.5.FaltaFilamento.md
+++ b/6.0.5.FaltaFilamento.md
@@ -1,4 +1,6 @@
+## Falta de filamento
 
+A veces nos encontramos con que al imprimirse una pieza se está instruyendo menos filamento del debido.  puede deberse a una mala configuración o bien a que el extrusor no está completamente limpio  quizás por un atasco, dando lugar  a una extrusión de un volumen menor de filamento
 
 [![Vídeo: 6.0.5 Falta de Filamento en nuestras piezas](https://img.youtube.com/vi/wCyif_drFDs/0.jpg)](https://drive.google.com/file/d/1iifZb49oO2-um6uKqntMlMC5gz6Bx5Co/view?usp=sharing)
 
