--- a/6.3.0.ImpresionPieza.md
+++ b/6.3.0.ImpresionPieza.md
@@ -1,56 +1,53 @@
 # Proceso Impresión pieza
 
+Ya hemos visto que un pieza impresa tiene diferentes tipos de extrusiones de filamento. 
+
+![Diferentes tipos de extursion para una pieza](./images/TiposExtrusion3dBenchy.png)
+
+En cada una de ellas se utilizan diferentes velocidades y volumen de plástico para conseguir el acabado adecuado. También en algunas se enciende el ventilar de capa para conseguir un enfriado rápido
+
+Vamos a ver algunos de estos tipos:
+1. **Primera capa**: para conseguir una buena adherencia las primeras capas se imprimen aplanadas, como podemos ver en la siguiente imagen:
+![Proceso Impresión pieza: Primera capa ](./images/3dPieza_2.jpg)
+2. **Perímetro**: es la parte más externa de cada capa, y al ser exterior se imprime despacio para conseguir un buen acabado
+1. **Perímetros primera capa**: mucho más planos que las restantes capas para asegurar la adherencia. Si vemos que sale redondita tenemos que recalibrar.
 ![Proceso Impresión pieza: Perímetros primera capa](./images/3dPieza_1.jpg)
+1. **Capas inferiores**: son las capas de abajo de la pieza que se ven desde el exterior. Hay que aclarar que podemos tener capas inferiores a cualquier altura, con tal de que sean visibles. Así la parte de abajo del tablero de una mesa sería una cafa inferior. Al ser vistas se imprimen más despacio para que tengan un buen acabado. Se suelen poner varias para dar fuerza y más calidad.
+1. **Relleno** forma el interior de las piezas y suele tener una estrucura determinada para ahorra plástico y tiempo de impresión.
+![Proceso Impresión pieza: Relleno y primera de las capas superiores ](./images/3dPieza_5.jpg)
+1. **Voladizo**: es cuando una caba no está totalmente sobre la capa anterior. Normalmente se susle medir por el ángulo que forma con la vertical. Por encima de 50º se recomienda usar soporte.
+![Voladizo en 3dBenchy](./images/Voladizo_3dBenchy.png)
+1. **Puente**: Una capa horizontal que no tiene capa debajo. Se imprime deprisa y con el ventilador de capa a tope para enfriarlo rápidamente.
+![Puente en 3dBenchy](./images/Puente3dBenchy.png)
+1. **Capas superiores**: Son las capas visibles desde arriba. Del mismo modo que las inferiores no son las más altas, sino que pueden estar en cualquier parte. Se imprimen varias para conseguir un mejor acabado. Los laminadores usan varios tipos de capas superiores para aunar velocidad y calidad. En la imagen anterior vemos la primera de las capas superiores que va haciendo "puentes" sobre el relleno. En la primera capa superior se pueden ver imperfecciones
+![Proceso Impresión pieza: 1ª capa superior](./images/3dPieza_6.jpg)
+Terminada la primera capa superior se imprime la 2ª con mucha mejor calidad, muy lisita.
+![Proceso Impresión pieza: 2ª capa superior](./images/3dPieza_7.jpg)
+En algunos casos, si la pieza es más compleja se pueden necesitar más capas superiores.
 
-Perímetros primera capa: mucho más planos que las restantes capas para asegurar la adherencia. Si vemos que sale redondita tenemos que recalibrar
-
-1. Capas inferiores
-1. Perímetros
-1. Relleno
-1. Capas superiores
-
-Distintas velocidades
-
-
-![Proceso Impresión pieza: ](./images/3dPieza_2.jpg)
-
-Primera capa muy lisita 
-
-![Proceso Impresión pieza: ](./images/3dPieza_5.jpg)
-
-Perímetros y relleno
-
-Primera capa superior
-
-![Proceso Impresión pieza: ](./images/3dPieza_6.jpg)
-
-Terminada la primera capa superior
-
-
-
-![Proceso Impresión pieza: ](./images/3dPieza_7.jpg)
-
-
-Segunda capa superior, muy lisita. En este caso habíamos configurado sólo 2 capas superiores
 
 ## Conceptos
 
-Retracción
-Soporte
-adherenica:
-* Borde
-* Falda
-* Brim
-
-Perímetros
-
-capa superior
-capa inferior
+Vamos a aprovechar para repasar algunos soportes
 
 
-puentes, arcos, agujeros, voladizos,
+**Soporte**: Material extra que se genera al laminar para que las capas superiores de voladizos o puentes tengan donde sustentarse.
+![Pieza con soporte y otra sin él](./images/Soporte_AmongUS.png)
+
+* Material extra generado por el laminador para mejorar la adherencia de la pieza con la base. Puede ser de diferentes tipos:
+    * **Falda**: se genera unos perímetros extra en la primera capa. Podemos configurar el número de perímetros.
+    ![](./images/falda_amongUS.png)    
+    * Brim/Balsa: genera varias capas extras de perímetros para mejorar la adherencia. Podemos configurar cuántas capas y el tamaño
+    ![](./images/balsa_AmongUS.png)
+
+
+* Retracción: es el movimiento para sacar el filamento que se hace para evitar goteos o que se generen hilos mientras el extrusor se mueve de un sitio a otro. Tiene como parámetros la cantidad de mm de retracción de filamento y la velocidad a la que se hace el movimiento. Si no tenemos bien configurada la retracción se generarán hilos como los de la imagen:
+![Mala retracción](./images/MalaRetraccion.png)
+
 
 ## Capas superiores e inferiores
+
+En este vídeo vamos a ver problemas con las capas superiores e inferiores.
 
 [![Vídeo: Calidad de las capas superiores](https://img.youtube.com/vi/kb7x8JF50N0/0.jpg)](https://drive.google.com/file/d/162UCOAhJpprlGXIQ7bDplaLy4nFF1YWB/view?usp=sharing)
 
