--- a/6.3.1.Modificadores.md
+++ b/6.3.1.Modificadores.md
@@ -1,6 +1,8 @@
 ## Modificadores
 
-En prusaSlicer o en Cura se pueden añadir modificadores tanto para reforzar el soporte como para quitarlo.
+En PrusaSlicer y en Cura se pueden añadir modificadores tanto para reforzar el soporte como para quitarlo. Son unas piezas extra que añadimos y de las que podemos configura su posición y tamaño para añadir o eliminar soportes en las zonas que queramos.
+
+Vamos a ver cómo hacerlo en Ultimaker Cura:
 
 
 [![Vídeo: 6.3.1 Bloqueadores de soporte en Ultimaker Cura](https://img.youtube.com/vi/7IkTQmxss2g/0.jpg)](https://drive.google.com/file/d/1iDEyX1sGsDvi48MMTCf1FYqKZ8INHQ65/view?usp=sharing)
@@ -8,7 +10,7 @@ En prusaSlicer o en Cura se pueden añadir modificadores tanto para reforzar el 
 
 [Vídeo: 6.3.1 Bloqueadores de soporte en Ultimaker Cura](https://drive.google.com/file/d/1iDEyX1sGsDvi48MMTCf1FYqKZ8INHQ65/view?usp=sharing)
 
-
+Ahora veremos cómo usarlos en PrusaSlicer:
 
 [![Vídeo: 6.3.1 Modificadores de soporte en PrusaSlicer: Refuerzo y Bloque de soporte](https://img.youtube.com/vi/wRm0zn3_I90/0.jpg)](https://drive.google.com/file/d/1brWtcqTIYJljr6qRWkTdPFtN0gPSAiib/view?usp=sharing)
 
