--- a/6.1.0.PrusaSlicer_avanzado.md
+++ b/6.1.0.PrusaSlicer_avanzado.md
@@ -1,4 +1,7 @@
 
+## Uso de la configuración avanzado de PrusaSlicer
+
+Existen varias herramientas que nos permiten trabajar con varios objetos o copias de uno mismo en PrusaSlicer.
 
 [![Vídeo: 6.1.x Uso de Varios Objetos o copias en PrusaSlicer](https://img.youtube.com/vi/fhGGqtpo2io/0.jpg)](https://drive.google.com/file/d/1ejO1mcKb3LxFnU9lykg86Fa3BdzRZLYS/view?usp=sharing)
 
@@ -6,38 +9,30 @@
 [Vídeo: 6.1.x Uso de Varios Objetos o copias en PrusaSlicer](https://drive.google.com/file/d/1ejO1mcKb3LxFnU9lykg86Fa3BdzRZLYS/view?usp=sharing)
 
 
+En el modo avanzado podemos asignar diferentes configuraciones para los distintos objetos en una misma impresión.  no están disponibles todas los parámetros de configuración pero si los más importantes.  De esta forma podemos conseguir de una tacada el comparar diferentes resultados en un mismo objeto para diferentes configuraciones.
+
+
 [![Vídeo: 6.1.x Uso de diferentes configuraciones para distintos objetos en PrusaSlicer](https://img.youtube.com/vi/9jhawLLsy0s/0.jpg)](https://drive.google.com/file/d/1dIgNY36wRkXQzCO0VKbbIu3vDxliuiZv/view?usp=sharing)
 
 [Vídeo: 6.1.x Uso de diferentes configuraciones para distintos objetos en PrusaSlicer](https://drive.google.com/file/d/1dIgNY36wRkXQzCO0VKbbIu3vDxliuiZv/view?usp=sharing)
 
+El modo avanzado nos permite configurar muchos más parámetros de impresión.  No os preocupéis si no conocéis todos estos parámetros poco a poco iremos trabajando con ellos.
 
 [![Vídeo: 6.1.x Primeros pasos en el modo Avanzado en PrusaSlicer](https://img.youtube.com/vi/w-FSk2mv1uI/0.jpg)](https://drive.google.com/file/d/10SZ2QQA-Kll3_9TAsn6VCuyacNpm53PJ/view?usp=sharing)
 
 
 [Vídeo: 6.1.x Primeros pasos en el modo Avanzado en PrusaSlicer](https://drive.google.com/file/d/10SZ2QQA-Kll3_9TAsn6VCuyacNpm53PJ/view?usp=sharing)
 
-
+Vamos a ver cómo podemos configurar el número de perímetros, el % y tipo de relleno y otros parámetros en el modo avanzado de PrusaSlicer.
 
 [![Vídeo: 6.1.x Perímetros y relleno avanzado en PrusaSlicer](https://img.youtube.com/vi/af7GGF_GbDM/0.jpg)](https://drive.google.com/file/d/1r9fs4vXCGgCbcO6oEZI683Uvz-jui-fD/view?usp=sharing)
 
 [Vídeo: 6.1.x Perímetros y relleno avanzado en PrusaSlicer](https://drive.google.com/file/d/1r9fs4vXCGgCbcO6oEZI683Uvz-jui-fD/view?usp=sharing)
 
+Una característica muy interesante de Prusa Slicer es que nos permite definir pintando con el ratón aquellas zona donde queremos que se incluyan soportes.  también podemos definir donde no queremos que en ningún caso se genere material de soporte.
 
 [![Vídeo: 6.1.x Pintando Soportes en PrusaSlicer](https://img.youtube.com/vi/2ZSIWTFOV0Q/0.jpg)](https://drive.google.com/file/d/1jWJqPaoCT18Dl2X-GpVdgAAfwpk1pdy9/view?usp=sharing)
 
 
 [Vídeo: 6.1.x Pintando Soportes en PrusaSlicer](https://drive.google.com/file/d/1jWJqPaoCT18Dl2X-GpVdgAAfwpk1pdy9/view?usp=sharing)
-
-## Recursos PrusaSlicer
-
-Excelente [documentción de Prusa Slicer](https://help.prusa3d.com/es/article/informacion-general_1910) ¡y en Español!
-
-
-
-[Documentación](http://imprimalia3d.com/recursosimpresion3d/gu-configuraci-n-par-metros-slic3r)
-
-[Tutorial de los expertos de bitfab.io](https://bitfab.io/es/blog/prusa-slicer/)
-
-
-[Problemas con las dimensiones](https://manual.slic3r.org/troubleshooting/dimension-errors)
 
